--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,2 +1,7 @@
 remote_theme: carlosperate/jekyll-theme-rtd
-title: High Performance Research Computing @ Texas A&M University Wiki
+title: TAMU HPRC Wiki
+github_docs_folder: true
+sticky_navigation: true
+prev_next_buttons_location: bottom
+search_enabled: true
+hljs_style: github-gist
